--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "react-redux": "^7.2.5",
+    "sass": "^1.43.2",
+    "sass-loader": "^10.1.1"
   }
 }
