--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "node-sass": "^4.14.1",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^6.0.2",
     "sass": "^1.43.2",
     "sass-loader": "^10.1.1"
   }
